--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index.html</title>
+    <title>Chinna Opticians</title>
 </head>
 <body>
     <p>Chinna Opticians</p>
 </body>
+<menu>
+  <li>About Us</li>
+  <li>Services</li>
+  <li>Contact Us</li>
+</menu>
 </html>
