--- a/index.html
+++ b/index.html
@@ -2,18 +2,259 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chinna Opticians</title>
+    <title>Chinna Opticians | Visakhapatnam</title>
+    <style>
+        /* General Reset & Typography */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        body {
+            line-height: 1.6;
+            color: #333;
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        /* Header Styles */
+        header {
+            background-color: #fff;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            padding: 1rem 5%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #2c3e50;
+            letter-spacing: 1px;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+        }
+
+        nav a {
+            color: #555;
+            font-weight: 500;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: #007bff;
+        }
+
+        /* Hero Section Styles */
+        .hero {
+            background-color: #f4f8fb;
+            text-align: center;
+            padding: 80px 20px;
+        }
+
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 15px;
+            color: #2c3e50;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            color: #666;
+            margin-bottom: 30px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 12px 30px;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background 0.3s;
+            margin: 5px;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            color: white;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+        }
+
+        .btn-secondary {
+            background-color: white;
+            color: #007bff;
+            border: 2px solid #007bff;
+        }
+
+        .btn-secondary:hover {
+            background-color: #eef5ff;
+        }
+
+        /* Product Columns Styles */
+        .products {
+            padding: 60px 5%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 20px;
+        }
+
+        .product-card {
+            flex: 1;
+            min-width: 250px;
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 30px;
+            text-align: center;
+            transition: transform 0.3s;
+        }
+
+        .product-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+
+        .product-card h3 {
+            margin-bottom: 15px;
+            color: #2c3e50;
+        }
+
+        .product-card p {
+            color: #777;
+            font-size: 0.95rem;
+            margin-bottom: 20px;
+        }
+
+        .link-text {
+            color: #007bff;
+            font-weight: bold;
+            font-size: 0.9rem;
+        }
+
+        /* Clinic Section Styles */
+        .clinic-section {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 60px 20px;
+        }
+
+        .clinic-section h2 {
+            font-size: 2.2rem;
+            margin-bottom: 20px;
+        }
+
+        .clinic-section .btn {
+            background-color: #27ae60;
+            color: white;
+        }
+
+        .clinic-section .btn:hover {
+            background-color: #219150;
+        }
+
+        /* Footer Styles */
+        footer {
+            background-color: #1a252f;
+            color: #bdc3c7;
+            padding: 40px 5%;
+            text-align: center;
+        }
+
+        footer p {
+            margin: 5px 0;
+        }
+
+        footer strong {
+            color: white;
+        }
+
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                gap: 15px;
+            }
+            .products {
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
 <body>
-    <p>Chinna Opticians</p>
-    
-<menu>
-  <li>About Us</li>
-  <li>Services</li>
-  <li>Contact Us</li>
-</menu>
-    
+
+    <header>
+        <div class="logo">Chinna Opticians</div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Eyeglasses</a></li>
+                <li><a href="#">Sunglasses</a></li>
+                <li><a href="#">Clinic</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1>Experts in Power Lenses</h1>
+        <p>Providing crystal clear vision with premium frames and advanced lens technology.</p>
+        <div class="buttons">
+            <a href="#" class="btn btn-primary">Shop Eyeglasses</a>
+            <a href="#" class="btn btn-secondary">Book Eye Test</a>
+        </div>
+    </section>
+
+    <section class="products">
+        <div class="product-card">
+            <h3>Eyeglasses</h3>
+            <p>Explore our wide range of durable and stylish frames for everyday wear.</p>
+            <a href="#" class="link-text">View Collection &rarr;</a>
+        </div>
+
+        <div class="product-card">
+            <h3>Sunglasses</h3>
+            <p>Protect your eyes from UV rays with our premium polarized sunglasses.</p>
+            <a href="#" class="link-text">View Collection &rarr;</a>
+        </div>
+
+        <div class="product-card">
+            <h3>Computer Glasses</h3>
+            <p>Blue light filters to reduce eye strain during long working hours.</p>
+            <a href="#" class="link-text">View Collection &rarr;</a>
+        </div>
+    </section>
+
+    <section class="clinic-section">
+        <h2>Eye Clinic & Checkup</h2>
+        <p>Professional eye testing by certified optometrists.</p>
+        <br>
+        <a href="#" class="btn">Book Appointment</a>
+    </section>
+
+    <footer>
+        <p><strong>Chinna Opticians</strong></p>
+        <p>Visakhapatnam, Andhra Pradesh, India</p>
+        <p>Phone: +91 98765 43210</p>
+        <p>&copy; 2023 Chinna Opticians. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
