--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Staccato 555 Regular', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         body {
@@ -38,6 +38,7 @@
 
         .logo {
             font-size: 1.5rem;
+            font-family: Staccato 555 Regular;
             font-weight: bold;
             color: #2c3e50;
             letter-spacing: 1px;
