--- a/index.html
+++ b/index.html
@@ -252,9 +252,10 @@
 
     <footer>
         <p><strong>Chinna Opticians</strong></p>
-        <p>Visakhapatnam, Andhra Pradesh, India</p>
-        <p>Phone: +91 98765 43210</p>
-        <p>&copy; 2023 Chinna Opticians. All rights reserved.</p>
+        <p><strong>Branch 1:</strong> D.no.: 49-1-6/1, Akkayyapalem Main Rd, near jaggarao bridge, opp. Apollo Pharmacy, Srinivas Nagar, Lalitha Nagar, Akkayyapalem, Visakhapatnam, Andhra Pradesh 530016
+        <strong>Branch 2:</strong> Apartment, SBI Bank Quarters, 44, Adarsh Nagar Rd, near RamaLakshmi Apartments, Ushodaya Center, Adarsh Nagar, Pedda Waltair, Visakhapatnam, Andhra Pradesh 530017</p>
+        <p>Phone: Branch 1: 089127 25410 & Branch 2: +91 97052 96144</p>
+        <p>&copy; Chinna Opticians Since 1963. All rights reserved.</p>
     </footer>
 
 </body>
