--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <body>
 
     <header>
-        <div class="logo">Chinna Opticians</div>
+        <div class="logo"><strong>Chinna Opticians</strong>Since 1963</div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
