--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Staccato 555 Regular', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Staccato 555 Std Regular', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         body {
@@ -38,7 +38,7 @@
 
         .logo {
             font-size: 1.5rem;
-            font-family: Staccato 555 Regular;
+            font-family: Staccato 555 Std Regular;
             font-weight: bold;
             color: #2c3e50;
             letter-spacing: 1px;
@@ -202,7 +202,7 @@
 <body>
 
     <header>
-        <div class="logo"><strong>Chinna Opticians</strong>Since 1963</div>
+        <div class="logo">Chinna Opticians<br>Since 1963</div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -253,8 +253,8 @@
     <footer>
         <p><strong>Chinna Opticians</strong></p>
         <p><strong>Branch 1:</strong> D.no.: 49-1-6/1, Akkayyapalem Main Rd, near jaggarao bridge, opp. Apollo Pharmacy, Srinivas Nagar, Lalitha Nagar, Akkayyapalem, Visakhapatnam, Andhra Pradesh 530016
-        <strong>Branch 2:</strong> Apartment, SBI Bank Quarters, 44, Adarsh Nagar Rd, near RamaLakshmi Apartments, Ushodaya Center, Adarsh Nagar, Pedda Waltair, Visakhapatnam, Andhra Pradesh 530017</p>
-        <p>Phone: Branch 1: 089127 25410 & Branch 2: +91 97052 96144</p>
+        <br><strong>Branch 2:</strong> Apartment, SBI Bank Quarters, 44, Adarsh Nagar Rd, near RamaLakshmi Apartments, Ushodaya Center, Adarsh Nagar, Pedda Waltair, Visakhapatnam, Andhra Pradesh 530017</p>
+        <p><strong>Phone:</strong> Branch 1: 089127 25410 & Branch 2: +91 97052 96144</p>
         <p>&copy; Chinna Opticians Since 1963. All rights reserved.</p>
     </footer>
 
