--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }
 
         nav a:hover {
-            color: #007bff;
+            color: #ee1b24;
         }
 
         /* Hero Section Styles */
@@ -70,7 +70,7 @@
         .hero h1 {
             font-size: 3rem;
             margin-bottom: 15px;
-            color: #2c3e50;
+            color: #ee1b24;
         }
 
         .hero p {
@@ -144,7 +144,7 @@
         }
 
         .link-text {
-            color: #007bff;
+            color: #ee1b24;
             font-weight: bold;
             font-size: 0.9rem;
         }
@@ -173,7 +173,7 @@
 
         /* Footer Styles */
         footer {
-            background-color: #1a252f;
+            background-color: #ee1b24;
             color: #bdc3c7;
             padding: 40px 5%;
             text-align: center;
