--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
         }
 
         .btn-primary {
-            background-color: #007bff;
+            background-color: #ee1b24;
             color: white;
         }
 
         .btn-primary:hover {
-            background-color: #0056b3;
+            background-color: #701f1c;
         }
 
         .btn-secondary {
             background-color: white;
-            color: #007bff;
-            border: 2px solid #007bff;
+            color: #ee1b24;
+            border: 2px solid #ee1b24;
         }
 
         .btn-secondary:hover {
-            background-color: #eef5ff;
+            background-color: #701f1c;
         }
 
         /* Product Columns Styles */
@@ -163,17 +163,17 @@
         }
 
         .clinic-section .btn {
-            background-color: #27ae60;
+            background-color: #ee1b24;
             color: white;
         }
 
         .clinic-section .btn:hover {
-            background-color: #219150;
+            background-color: #701f1c;
         }
 
         /* Footer Styles */
         footer {
-            background-color: #ee1b24;
+            background-color: #1c1c1a;
             color: #bdc3c7;
             padding: 40px 5%;
             text-align: center;
