--- a/index.html
+++ b/index.html
@@ -202,7 +202,11 @@
 <body>
 
     <header>
-        <div class="logo">Chinna Opticians<br>Since 1963</div>
+       <div class="logo">
+        <a href="index.html">
+        <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo" style="height: 50px; width: auto; vertical-align: middle;">
+        </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
