--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         }
 
         .btn-secondary:hover {
-            background-color: #701f1c;
+            background-color: #ffe2e2;
         }
 
         /* Product Columns Styles */
@@ -204,7 +204,7 @@
     <header>
        <div class="logo">
         <a href="index.html">
-        <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo" style="height: 50px; width: auto; vertical-align: middle;">
+        <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo" style="height: 100px; width: auto; vertical-align: middle;">
         </a>
         </div>
         <nav>
