--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chinna Opticians | Visakhapatnam</title>
+
+    <!-- Optional: Google Font for cleaner typography -->
+    <!-- You can remove this if you want to keep only system fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     <style>
         /* General Reset & Typography */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Staccato 555 Std Regular', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        html {
+            scroll-behavior: smooth; /* smooth scrolling for nav links */
         }
 
         body {
+            font-family: 'Poppins', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
+            background-color: #f9fafb;
         }
 
         a {
@@ -23,69 +35,163 @@
             color: inherit;
         }
 
+        img {
+            max-width: 100%;
+            display: block;
+        }
+
+        /* Layout container */
+        .container {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
         /* Header Styles */
         header {
             background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            padding: 1rem 5%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.06);
+            padding: 0.75rem 0;
             position: sticky;
             top: 0;
             z-index: 1000;
         }
 
+        .header-inner {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
         .logo {
-            font-size: 1.5rem;
-            font-family: Staccato 555 Std Regular;
-            font-weight: bold;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .logo img {
+            height: 60px;
+            width: auto;
+        }
+
+        .logo-text {
+            font-size: 1.3rem;
+            font-weight: 600;
             color: #2c3e50;
-            letter-spacing: 1px;
+            letter-spacing: 0.5px;
         }
 
         nav ul {
             list-style: none;
             display: flex;
-            gap: 20px;
+            gap: 1.5rem;
         }
 
         nav a {
             color: #555;
             font-weight: 500;
-            transition: color 0.3s;
+            font-size: 0.95rem;
+            position: relative;
+            padding-bottom: 3px;
         }
 
-        nav a:hover {
-            color: #ee1b24;
+        nav a::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 0;
+            height: 2px;
+            background-color: #ee1b24;
+            transition: width 0.3s;
+        }
+
+        nav a:hover::after {
+            width: 100%;
         }
 
         /* Hero Section Styles */
         .hero {
             background-color: #f4f8fb;
-            text-align: center;
-            padding: 80px 20px;
+            padding: 80px 0;
+        }
+
+        .hero-inner {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 40px;
+            flex-wrap: wrap;
+        }
+
+        .hero-content {
+            flex: 1 1 320px;
+            text-align: left;
         }
 
         .hero h1 {
-            font-size: 3rem;
+            font-size: 2.4rem;
             margin-bottom: 15px;
             color: #ee1b24;
         }
 
         .hero p {
-            font-size: 1.2rem;
-            color: #666;
-            margin-bottom: 30px;
+            font-size: 1.05rem;
+            color: #555;
+            margin-bottom: 25px;
+            max-width: 430px;
         }
 
+        .hero-badges {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+            margin-bottom: 20px;
+            font-size: 0.9rem;
+            color: #555;
+        }
+
+        .badge {
+            background-color: #fff;
+            border-radius: 999px;
+            padding: 6px 12px;
+            border: 1px solid #e1e4e8;
+        }
+
+        .hero-buttons .btn {
+            margin-right: 8px;
+        }
+
+        .hero-image {
+            flex: 1 1 280px;
+            text-align: center;
+        }
+
+        .hero-placeholder {
+            width: 100%;
+            max-width: 360px;
+            height: 220px;
+            margin: 0 auto;
+            border-radius: 20px;
+            background: linear-gradient(135deg, #ee1b24, #701f1c);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            font-weight: 500;
+            font-size: 1.05rem;
+        }
+
+        /* Buttons */
         .btn {
             display: inline-block;
-            padding: 12px 30px;
-            border-radius: 5px;
-            font-weight: bold;
-            transition: background 0.3s;
-            margin: 5px;
+            padding: 12px 26px;
+            border-radius: 999px;
+            font-weight: 600;
+            font-size: 0.95rem;
+            border: 2px solid transparent;
+            cursor: pointer;
+            transition: background 0.3s, color 0.3s, border-color 0.3s, transform 0.2s;
         }
 
         .btn-primary {
@@ -95,57 +201,78 @@
 
         .btn-primary:hover {
             background-color: #701f1c;
+            transform: translateY(-1px);
         }
 
         .btn-secondary {
             background-color: white;
             color: #ee1b24;
-            border: 2px solid #ee1b24;
+            border-color: #ee1b24;
         }
 
         .btn-secondary:hover {
             background-color: #ffe2e2;
+            transform: translateY(-1px);
+        }
+
+        /* Section headings */
+        .section-title {
+            text-align: center;
+            font-size: 1.9rem;
+            margin-bottom: 10px;
+            color: #2c3e50;
+        }
+
+        .section-subtitle {
+            text-align: center;
+            font-size: 0.98rem;
+            color: #777;
+            margin-bottom: 35px;
         }
 
         /* Product Columns Styles */
         .products {
-            padding: 60px 5%;
+            padding: 60px 0;
+        }
+
+        .products-grid {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
             gap: 20px;
         }
 
         .product-card {
-            flex: 1;
-            min-width: 250px;
+            flex: 1 1 260px;
+            max-width: 340px;
             background: white;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 30px;
-            text-align: center;
-            transition: transform 0.3s;
+            border: 1px solid #e1e4e8;
+            border-radius: 12px;
+            padding: 24px 20px 20px;
+            text-align: left;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .product-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            transform: translateY(-6px);
+            box-shadow: 0 10px 18px rgba(0,0,0,0.08);
         }
 
         .product-card h3 {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
             color: #2c3e50;
+            font-size: 1.2rem;
         }
 
         .product-card p {
             color: #777;
             font-size: 0.95rem;
-            margin-bottom: 20px;
+            margin-bottom: 18px;
         }
 
         .link-text {
             color: #ee1b24;
-            font-weight: bold;
+            font-weight: 600;
             font-size: 0.9rem;
         }
 
@@ -154,112 +281,228 @@
             background-color: #2c3e50;
             color: white;
             text-align: center;
-            padding: 60px 20px;
+            padding: 60px 0;
         }
 
-        .clinic-section h2 {
-            font-size: 2.2rem;
-            margin-bottom: 20px;
+        .clinic-section p {
+            max-width: 480px;
+            margin: 0 auto 20px;
+            font-size: 0.98rem;
         }
 
-        .clinic-section .btn {
-            background-color: #ee1b24;
-            color: white;
+        .clinic-details {
+            margin-top: 10px;
+            font-size: 0.9rem;
+            color: #d5dde5;
         }
 
-        .clinic-section .btn:hover {
-            background-color: #701f1c;
+        /* Contact / CTA strip */
+        .contact-strip {
+            background-color: #fff;
+            border-top: 1px solid #e1e4e8;
+            border-bottom: 1px solid #e1e4e8;
+            padding: 20px 0;
+        }
+
+        .contact-strip-inner {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .contact-strip p {
+            font-size: 0.95rem;
+            color: #555;
+        }
+
+        .contact-actions .btn {
+            margin-left: 6px;
         }
 
         /* Footer Styles */
         footer {
             background-color: #1c1c1a;
             color: #bdc3c7;
-            padding: 40px 5%;
-            text-align: center;
+            padding: 30px 0;
+            font-size: 0.9rem;
         }
 
         footer p {
-            margin: 5px 0;
+            margin: 4px 0;
         }
 
         footer strong {
-            color: white;
+            color: #ffffff;
         }
 
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
-            header {
+            .header-inner {
                 flex-direction: column;
-                gap: 15px;
+                align-items: flex-start;
+                gap: 10px;
             }
-            .products {
+
+            nav ul {
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            .hero {
+                padding: 50px 0;
+            }
+
+            .hero-inner {
                 flex-direction: column;
+                text-align: center;
+            }
+
+            .hero-content {
+                text-align: center;
+            }
+
+            .hero p {
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .hero-badges {
+                justify-content: center;
+            }
+
+            .contact-strip-inner {
+                flex-direction: column;
+                align-items: flex-start;
             }
         }
     </style>
 </head>
 <body>
 
+    <!-- HEADER -->
     <header>
-       <div class="logo">
-        <a href="index.html">
-        <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo" style="height: 100px; width: auto; vertical-align: middle;">
-        </a>
+        <div class="container header-inner">
+            <div class="logo">
+                <a href="#top">
+                    <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo">
+                </a>
+                <span class="logo-text">Chinna Opticians</span>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#products">Eyeglasses</a></li>
+                    <li><a href="#products">Sunglasses</a></li>
+                    <li><a href="#products">Computer Glasses</a></li>
+                    <li><a href="#clinic">Clinic</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Eyeglasses</a></li>
-                <li><a href="#">Sunglasses</a></li>
-                <li><a href="#">Clinic</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <section class="hero">
-        <h1>Experts in Power Lenses</h1>
-        <p>Providing crystal clear vision with premium frames and advanced lens technology.</p>
-        <div class="buttons">
-            <a href="#" class="btn btn-primary">Shop Eyeglasses</a>
-            <a href="#" class="btn btn-secondary">Book Eye Test</a>
-        </div>
-    </section>
+    <!-- HERO -->
+    <main id="top">
+        <section class="hero" id="hero">
+            <div class="container hero-inner">
+                <div class="hero-content">
+                    <div class="hero-badges">
+                        <span class="badge">Since 1963</span>
+                        <span class="badge">Trusted Opticians in Vizag</span>
+                    </div>
+                    <h1>Experts in Power Lenses</h1>
+                    <p>Providing crystal clear vision with premium frames and advanced lens technology across our Visakhapatnam branches.</p>
+                    <div class="hero-buttons">
+                        <a href="#products" class="btn btn-primary">Shop Eyeglasses</a>
+                        <a href="#clinic" class="btn btn-secondary">Book Eye Test</a>
+                    </div>
+                </div>
+                <div class="hero-image">
+                    <!-- Replace this placeholder with an actual copyright-free image if you want -->
+                    <div class="hero-placeholder">
+                        Your frame & lens visual here
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section class="products">
-        <div class="product-card">
-            <h3>Eyeglasses</h3>
-            <p>Explore our wide range of durable and stylish frames for everyday wear.</p>
-            <a href="#" class="link-text">View Collection &rarr;</a>
-        </div>
+        <!-- PRODUCTS -->
+        <section class="products" id="products">
+            <div class="container">
+                <h2 class="section-title">Frames for Every Need</h2>
+                <p class="section-subtitle">Choose from eyeglasses, sunglasses and computer glasses tailored to your prescription.</p>
 
-        <div class="product-card">
-            <h3>Sunglasses</h3>
-            <p>Protect your eyes from UV rays with our premium polarized sunglasses.</p>
-            <a href="#" class="link-text">View Collection &rarr;</a>
-        </div>
+                <div class="products-grid">
+                    <div class="product-card">
+                        <h3>Eyeglasses</h3>
+                        <p>Explore a wide range of durable, stylish frames for everyday comfort and clear vision.</p>
+                        <a href="#" class="link-text">View Collection &rarr;</a>
+                    </div>
 
-        <div class="product-card">
-            <h3>Computer Glasses</h3>
-            <p>Blue light filters to reduce eye strain during long working hours.</p>
-            <a href="#" class="link-text">View Collection &rarr;</a>
-        </div>
-    </section>
+                    <div class="product-card">
+                        <h3>Sunglasses</h3>
+                        <p>Protect your eyes from UV rays with polarized and prescription-ready sunglasses.</p>
+                        <a href="#" class="link-text">View Collection &rarr;</a>
+                    </div>
 
-    <section class="clinic-section">
-        <h2>Eye Clinic & Checkup</h2>
-        <p>Professional eye testing by certified optometrists.</p>
-        <br>
-        <a href="#" class="btn">Book Appointment</a>
-    </section>
+                    <div class="product-card">
+                        <h3>Computer Glasses</h3>
+                        <p>Blue light protection lenses to reduce eye strain during long screen hours.</p>
+                        <a href="#" class="link-text">View Collection &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- CLINIC SECTION -->
+        <section class="clinic-section" id="clinic">
+            <div class="container">
+                <h2>Eye Clinic & Checkup</h2>
+                <p>Professional eye testing by certified optometrists with advanced equipment and accurate power measurements.</p>
+                <div class="clinic-details">
+                    <p>Available at both Akkayyapalem and Adarsh Nagar branches.</p>
+                </div>
+                <br>
+                <a href="#contact" class="btn btn-primary">Book Appointment</a>
+            </div>
+        </section>
+
+        <!-- CONTACT STRIP -->
+        <section class="contact-strip" id="contact">
+            <div class="container contact-strip-inner">
+                <div>
+                    <p><strong>Visit our branches in Visakhapatnam</strong></p>
+                    <p>
+                        Akkayyapalem &middot; Adarsh Nagar (Ushodaya Center)
+                    </p>
+                </div>
+                <div class="contact-actions">
+                    <!-- Make phone and WhatsApp clickable -->
+                    <a href="tel:+918912725410" class="btn btn-secondary">Call Branch 1</a>
+                    <a href="tel:+919705296144" class="btn btn-secondary">Call Branch 2</a>
+                    <a href="https://wa.me/919705296144" class="btn btn-primary" target="_blank">WhatsApp</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
     <footer>
-        <p><strong>Chinna Opticians</strong></p>
-        <p><strong>Branch 1:</strong> D.no.: 49-1-6/1, Akkayyapalem Main Rd, near jaggarao bridge, opp. Apollo Pharmacy, Srinivas Nagar, Lalitha Nagar, Akkayyapalem, Visakhapatnam, Andhra Pradesh 530016
-        <br><strong>Branch 2:</strong> Apartment, SBI Bank Quarters, 44, Adarsh Nagar Rd, near RamaLakshmi Apartments, Ushodaya Center, Adarsh Nagar, Pedda Waltair, Visakhapatnam, Andhra Pradesh 530017</p>
-        <p><strong>Phone:</strong> Branch 1: 089127 25410 & Branch 2: +91 97052 96144</p>
-        <p>&copy; Chinna Opticians Since 1963. All rights reserved.</p>
+        <div class="container">
+            <p><strong>Chinna Opticians</strong></p>
+            <p>
+                <strong>Branch 1:</strong> D.no.: 49-1-6/1, Akkayyapalem Main Rd, near Jaggarao bridge, opp. Apollo Pharmacy, Srinivas Nagar, Lalitha Nagar, Akkayyapalem, Visakhapatnam, Andhra Pradesh 530016
+            </p>
+            <p>
+                <strong>Branch 2:</strong> Apartment, SBI Bank Quarters, 44, Adarsh Nagar Rd, near RamaLakshmi Apartments, Ushodaya Center, Adarsh Nagar, Pedda Waltair, Visakhapatnam, Andhra Pradesh 530017
+            </p>
+            <p>
+                <strong>Phone:</strong> Branch 1: 089127 25410 &nbsp; | &nbsp; Branch 2: +91 97052 96144
+            </p>
+            <p>&copy; Chinna Opticians Since 1963. All rights reserved.</p>
+        </div>
     </footer>
 
 </body>
