Update logo link in header to point to index.html

--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
     <header>
         <div class="container header-inner">
             <div class="logo">
-                <a href="#top">
-                    <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo">
+               <a href="index.html">
+        <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo" style="height: 100px; width: auto; vertical-align: middle;">
                 </a>
             </div>
             <nav>
