--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chinna Opticians | Visakhapatnam</title>
 
-    <!-- Optional: Google Font for cleaner typography -->
-    <!-- You can remove this if you want to keep only system fonts -->
+    <!-- Basic SEO -->
+    <meta name="description" content="Chinna Opticians, trusted since 1963 in Visakhapatnam. Eyeglasses, sunglasses, computer glasses and eye clinic services at Akkayyapalem and Adarsh Nagar branches.">
+    <meta name="keywords" content="Chinna Opticians, opticians in Visakhapatnam, eyeglasses, sunglasses, computer glasses, eye clinic Vizag">
+    <meta name="author" content="Chinna Opticians">
+
+    <!-- Favicon (optional) -->
+    <!-- Place a small icon file as favicon.ico or logo.png in your repo and update href -->
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -20,7 +28,7 @@
         }
 
         html {
-            scroll-behavior: smooth; /* smooth scrolling for nav links */
+            scroll-behavior: smooth;
         }
 
         body {
@@ -106,8 +114,14 @@
             transition: width 0.3s;
         }
 
-        nav a:hover::after {
+        nav a:hover::after,
+        nav a:focus-visible::after {
             width: 100%;
+        }
+
+        nav a:focus-visible {
+            outline: 2px solid #ee1b24;
+            outline-offset: 2px;
         }
 
         /* Hero Section Styles */
@@ -180,6 +194,8 @@
             color: #fff;
             font-weight: 500;
             font-size: 1.05rem;
+            padding: 0 16px;
+            text-align: center;
         }
 
         /* Buttons */
@@ -230,7 +246,7 @@
             margin-bottom: 35px;
         }
 
-        /* Product Columns Styles */
+        /* Products Section */
         .products {
             padding: 60px 0;
         }
@@ -276,7 +292,7 @@
             font-size: 0.9rem;
         }
 
-        /* Clinic Section Styles */
+        /* Clinic Section */
         .clinic-section {
             background-color: #2c3e50;
             color: white;
@@ -293,6 +309,39 @@
         .clinic-details {
             margin-top: 10px;
             font-size: 0.9rem;
+            color: #d5dde5;
+        }
+
+        /* Simple Book Eye Test Form */
+        .booking-form {
+            margin-top: 25px;
+            max-width: 420px;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: left;
+        }
+
+        .booking-form label {
+            display: block;
+            font-size: 0.85rem;
+            margin-bottom: 4px;
+            color: #e6ecf2;
+        }
+
+        .booking-form input,
+        .booking-form select,
+        .booking-form textarea {
+            width: 100%;
+            padding: 8px 10px;
+            margin-bottom: 10px;
+            border-radius: 6px;
+            border: 1px solid #52647a;
+            font-family: inherit;
+            font-size: 0.9rem;
+        }
+
+        .booking-form small {
+            font-size: 0.8rem;
             color: #d5dde5;
         }
 
@@ -321,7 +370,7 @@
             margin-left: 6px;
         }
 
-        /* Footer Styles */
+        /* Footer */
         footer {
             background-color: #1c1c1a;
             color: #bdc3c7;
@@ -385,8 +434,8 @@
     <header>
         <div class="container header-inner">
             <div class="logo">
-               <a href="index.html">
-        <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo" style="height: 100px; width: auto; vertical-align: middle;">
+                <a href="#top">
+                    <img src="chinna opticians logo.jpg" alt="Chinna Opticians logo">
                 </a>
             </div>
             <nav>
@@ -402,8 +451,9 @@
         </div>
     </header>
 
-    <!-- HERO -->
+    <!-- MAIN -->
     <main id="top">
+        <!-- HERO -->
         <section class="hero" id="hero">
             <div class="container hero-inner">
                 <div class="hero-content">
@@ -419,9 +469,9 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <!-- Replace this placeholder with an actual copyright-free image if you want -->
+                    <!-- Replace with an actual copyright-free image -->
                     <div class="hero-placeholder">
-                        Your frame & lens visual here
+                        Add an eyewear or eye-test image here to showcase your store or clinic.
                     </div>
                 </div>
             </div>
@@ -437,25 +487,25 @@
                     <div class="product-card">
                         <h3>Eyeglasses</h3>
                         <p>Explore a wide range of durable, stylish frames for everyday comfort and clear vision.</p>
-                        <a href="#" class="link-text">View Collection &rarr;</a>
+                        <a href="#contact" class="link-text">Enquire about eyeglasses &rarr;</a>
                     </div>
 
                     <div class="product-card">
                         <h3>Sunglasses</h3>
                         <p>Protect your eyes from UV rays with polarized and prescription-ready sunglasses.</p>
-                        <a href="#" class="link-text">View Collection &rarr;</a>
+                        <a href="#contact" class="link-text">Enquire about sunglasses &rarr;</a>
                     </div>
 
                     <div class="product-card">
                         <h3>Computer Glasses</h3>
                         <p>Blue light protection lenses to reduce eye strain during long screen hours.</p>
-                        <a href="#" class="link-text">View Collection &rarr;</a>
+                        <a href="#contact" class="link-text">Enquire about computer glasses &rarr;</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- CLINIC SECTION -->
+        <!-- CLINIC SECTION + SIMPLE FORM -->
         <section class="clinic-section" id="clinic">
             <div class="container">
                 <h2>Eye Clinic & Checkup</h2>
@@ -463,8 +513,32 @@
                 <div class="clinic-details">
                     <p>Available at both Akkayyapalem and Adarsh Nagar branches.</p>
                 </div>
-                <br>
-                <a href="#contact" class="btn btn-primary">Book Appointment</a>
+
+                <div class="booking-form" aria-label="Book eye test form">
+                    <form>
+                        <label for="name">Full name</label>
+                        <input type="text" id="name" name="name" placeholder="Your name">
+
+                        <label for="phone">Mobile number</label>
+                        <input type="tel" id="phone" name="phone" placeholder="Your phone number">
+
+                        <label for="branch">Preferred branch</label>
+                        <select id="branch" name="branch">
+                            <option value="">Select branch</option>
+                            <option value="akkayyapalem">Akkayyapalem</option>
+                            <option value="adarsh-nagar">Adarsh Nagar (Ushodaya Center)</option>
+                        </select>
+
+                        <label for="message">Preferred date / time (optional)</label>
+                        <textarea id="message" name="message" rows="3" placeholder="Mention a suitable date or time for eye test"></textarea>
+
+                        <small>This is a demo form and does not submit anywhere yet. Please call or WhatsApp to confirm your appointment.</small>
+                        <br><br>
+                        <button type="button" class="btn btn-primary" onclick="window.location.href='#contact'">
+                            Submit & Contact
+                        </button>
+                    </form>
+                </div>
             </div>
         </section>
 
@@ -478,10 +552,9 @@
                     </p>
                 </div>
                 <div class="contact-actions">
-                    <!-- Make phone and WhatsApp clickable -->
                     <a href="tel:+918912725410" class="btn btn-secondary">Call Branch 1</a>
                     <a href="tel:+919705296144" class="btn btn-secondary">Call Branch 2</a>
-                    <a href="https://wa.me/919705296144" class="btn btn-primary" target="_blank">WhatsApp</a>
+                    <a href="https://wa.me/919705296144" class="btn btn-primary" target="_blank" rel="noopener">WhatsApp</a>
                 </div>
             </div>
         </section>
