Update logo and replace placeholder images

--- a/index.html
+++ b/index.html
@@ -466,10 +466,9 @@
     <header>
         <div class="container header-inner">
             <div class="logo">
-                <a href="#top">
-                    <img src="chinna opticians logo.jpg" alt="Chinna Opticians logo">
+                <a href="index.html">
+        <img src="chinna opticians logo.jpg" alt="Chinna Opticians Logo" style="height: 100px; width: auto; vertical-align: middle;">
                 </a>
-                <span class="logo-text">Chinna Opticians</span>
             </div>
             <nav>
                 <ul>
@@ -502,10 +501,9 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <div class="hero-placeholder">
-                        Add an eyewear or eye-test image here to showcase your store or clinic.
-                    </div>
+                    <img src="hero-eyewear.jpg" alt="Customer trying eyeglasses at Chinna Opticians clinic">
                 </div>
+
             </div>
         </section>
 
@@ -590,7 +588,7 @@
                             <div class="map-label">Branch 1: Akkayyapalem</div>
                             <iframe
                                 title="Chinna Opticians Akkayyapalem location map"
-                                src="YOUR_GOOGLE_MAPS_EMBED_URL_FOR_AKKAYYAPALEM_HERE"
+                                src="https://www.google.com/maps/place/CHINNA+OPTICIANS/@17.7322207,83.2969003,17z/data=!3m1!4b1!4m6!3m5!1s0x3a39432f4833a7dd:0xb4f3d9691202e8af!8m2!3d17.7322156!4d83.2994752!16s%2Fg%2F124yf2w9j?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
                                 allowfullscreen=""
                                 loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
@@ -602,7 +600,7 @@
                             <div class="map-label">Branch 2: Adarsh Nagar (Ushodaya Center)</div>
                             <iframe
                                 title="Chinna Opticians Adarsh Nagar location map"
-                                src="YOUR_GOOGLE_MAPS_EMBED_URL_FOR_ADARSH_NAGAR_HERE"
+                                src="https://www.google.com/maps/place/CHINNA+OPTICIANS/@17.7347241,83.3299225,17z/data=!3m1!4b1!4m6!3m5!1s0x3a3943576b70943b:0xa47919e9416c47f8!8m2!3d17.734719!4d83.3324974!16s%2Fg%2F11b5ytbm55?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
                                 allowfullscreen=""
                                 loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
