--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <div class="map-label">Branch 1: Akkayyapalem</div>
                             <iframe
                                 title="Chinna Opticians Akkayyapalem location map"
-                                src="https://www.google.com/maps/place/CHINNA+OPTICIANS/@17.7322207,83.2969003,17z/data=!3m1!4b1!4m6!3m5!1s0x3a39432f4833a7dd:0xb4f3d9691202e8af!8m2!3d17.7322156!4d83.2994752!16s%2Fg%2F124yf2w9j?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3800.2634701303573!2d83.29690027369845!3d17.732220692782597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a39432f4833a7dd%3A0xb4f3d9691202e8af!2sCHINNA%20OPTICIANS!5e0!3m2!1sen!2sin!4v1767270323591!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
                                 allowfullscreen=""
                                 loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
@@ -161,7 +161,7 @@
                             <div class="map-label">Branch 2: Adarsh Nagar (Ushodaya Center)</div>
                             <iframe
                                 title="Chinna Opticians Adarsh Nagar location map"
-                                src="https://www.google.com/maps/place/CHINNA+OPTICIANS/@17.7347241,83.3299225,17z/data=!3m1!4b1!4m6!3m5!1s0x3a3943576b70943b:0xa47919e9416c47f8!8m2!3d17.734719!4d83.3324974!16s%2Fg%2F11b5ytbm55?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3800.2103724275535!2d83.32992247369859!3d17.734724092709143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3943576b70943b%3A0xa47919e9416c47f8!2sCHINNA%20OPTICIANS!5e0!3m2!1sen!2sin!4v1767270269770!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
                                 allowfullscreen=""
                                 loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
