Update contact information for Branch 2

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
                 <div class="contact-actions">
                     <a href="tel:+918912725410" class="btn btn-secondary">Call Branch 1</a>
-                    <a href="tel:+919705296144" class="btn btn-secondary">Call Branch 2</a>
-                    <a href="https://wa.me/919705296144" class="btn btn-primary" target="_blank" rel="noopener">WhatsApp</a>
+                    <a href="tel:+91 89779 47887" class="btn btn-secondary">Call Branch 2</a>
+                    <a href="https://wa.me/919959988116" class="btn btn-primary" target="_blank" rel="noopener">WhatsApp</a>
                 </div>
             </div>
         </section>
@@ -184,7 +184,7 @@
                 <strong>Branch 2:</strong> Apartment, SBI Bank Quarters, 44, Adarsh Nagar Rd, near RamaLakshmi Apartments, Ushodaya Center, Adarsh Nagar, Pedda Waltair, Visakhapatnam, Andhra Pradesh 530017
             </p>
             <p>
-                <strong>Phone:</strong> Branch 1: 089127 25410 &nbsp; | &nbsp; Branch 2: +91 97052 96144
+                <strong>Phone:</strong> Branch 1: 089127 25410 &nbsp; | &nbsp; Branch 2: +91 89779 47887
             </p>
             <p>&copy; Chinna Opticians Since 1963. All rights reserved.</p>
         </div>
