Add brand logos section to index.html
Added a section for brand logos with images.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
             </div>
         </section>
 
+        <!-- Brand logos -->
+       <div class="brands-section">
+         <div class="brands-container">
+            <img src="nova-logo.png" alt="Nova lenses" loading="lazy">
+            <img src="crizal-logo.png" alt="Crizal coatings" loading="lazy">
+            <img src="gkb-logo.png" alt="GKB Opticals" loading="lazy">      
+            <img src="shiryoku-logo.png" alt="Shiryoku lenses" loading="lazy">
+           <img src="ray ban-logo.png" alt="Ray Ban eyewear" loading="lazy">
+         </div>
+       </div>
+
+        
         <!-- CLINIC SECTION + FORM -->
         <section class="clinic-section" id="clinic">
             <div class="container">
