--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
             <img src="crizal-logo.png" alt="Crizal coatings" loading="lazy">
             <img src="gkb-logo.png" alt="GKB Opticals" loading="lazy">      
             <img src="shiryoku-logo.png" alt="Shiryoku lenses" loading="lazy">
-           <img src="ray ban-logo.png" alt="Ray Ban eyewear" loading="lazy">
+            <img src="ray ban-logo.png" alt="Ray Ban eyewear" loading="lazy">
+            <img src="prada-logo.png" alt="Prada eyewear" loading="lazy">
+            <img src="ck-logo.png" alt="Calvin Klein eyewear" loading="lazy">
          </div>
        </div>
 
