Add WhatsApp link and testimonials section
Added a WhatsApp contact link and a testimonials section with customer feedback.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
             </div>
         </section>
 
+         <a href="https://wa.me/919959988116" class="whatsapp-float" target="_blank" rel="noopener">
+            💬 WhatsApp
+         </a>
+
+        
         <!-- Brand logos -->
        <div class="brands-section">
          <div class="brands-container">
@@ -109,6 +114,34 @@
          </div>
        </div>
 
+        <!-- Testimonials -->
+        <section class="testimonials">
+          <div class="container">
+             <h2 class="section-title">What our customers say</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial-card">
+                <p>"Good option for optical shop in akkayapalem. They have different and latest  varieties always. Staff is also experienced.
+Pricing is also less when compared to others and doctor consultation is available.
+I have been a customer since many years.
+Happy to recommend this shop."</p>
+                <strong>- Ramesh Wv</strong>
+            </div>
+            <div class="testimonial-card">
+                <p>"The prices here are very low and reasonable, almost half that of other shops. I give 10 Star rating for this shop and I also suggest to all Vizag and Andhra people's  to make new spectacles at a discounted rate for you and your children at Chinna Opticals which was established in 1963.
+Chinna Opticians, near Jaggarao bridge Akkayyapalem main road vizag."</p>
+                <strong>- Goush Lazam</strong>
+             </div>
+            <div class="testimonial-card">
+                <p>"I highly recommend this optical shop to everyone. The service is friendly, fast,a geniune products and most importantly extremely accurate.. I have never had the slightest discrepancy regarding my eye power when I got checked here. The owner there gives us the best suggestions with heavy discounts."</p>
+                <strong>- Sainath Vaikuntham</strong>
+            </div>
+            <div class="testimonial-card">
+                <p>"Very good owner and staff. Very reasonable prices comparatively other shops. For poor people they will give cost price only without taking any profit. Excellent."</p>
+                <strong>- Chandramouli Bugatha</strong>
+            </div>
+        </div>
+        </div>  
+        </section>
         
         <!-- CLINIC SECTION + FORM -->
         <section class="clinic-section" id="clinic">
