Refactor testimonials in index.html
Updated testimonial citations and formatted blockquote for better readability.

--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
         <div class="testimonial-grid">
             <div class="testimonial-card">
                 <blockquote>"Good option for optical shop... Happy to recommend this shop."</blockquote>
-                <cite>- Ramesh Wv, Akkayyapalem</cite>
+                <cite>- Ramesh Wv</cite>
             </div>
             <div class="testimonial-card">
-                <blockquote>"The prices here are very low... 10 Star rating!"</blockquote>
+                <blockquote>"The prices here are very low... 
+                    10 Star rating!"</blockquote>
                 <cite>- Goush Lazam</cite>
             </div>
             <div class="testimonial-card">
