Add promo banner and update submit button with WhatsApp link
Added a promotional banner for a limited time offer and updated the submit button to include a WhatsApp link.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div class="promo-banner">
+    <div class="container">
+        <p>🎉 <strong>Limited time:</strong> Flat 40% off frames! <a href="#contact">Visit now</a></p>
+    </div>
+</div>
     <!-- HEADER -->
     <header>
         <div class="container header-inner">
@@ -165,7 +169,7 @@
 
                         <small>This is a demo form and does not submit anywhere yet. Please call or WhatsApp to confirm your appointment.</small>
                         <br><br>
-                        <button type="button" class="btn btn-primary" onclick="window.location.href='#contact'">
+                        <button type="button" class="btn btn-primary" onclick="window.location. <a>href='https://wa.me/919959988116'" class="btn btn-primary" target="_blank" rel="noopener">WhatsApp</a>">
                             Submit & Contact
                         </button>
                     </form>
@@ -233,13 +237,16 @@
 <a href="https://wa.me/919959988116" class="whatsapp-float" target="_blank" rel="noopener">
     💬 WhatsApp
 </a>
-<div class="promo-banner">
-    <div class="container">
-        <p>🎉 <strong>Limited time:</strong> Flat 40% off on all frames! <a href="#contact">Visit now</a></p>
-    </div>
-</div>
+
     <button class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
     ↑ Top
     </button>
+
+    <script>
+window.addEventListener('scroll', () => {
+    document.querySelector('.scroll-top').classList.toggle('show', window.scrollY > 300);
+});
+</script>
+
 </body>
 </html>
