Update promotional text and button functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <div class="promo-banner">
     <div class="container">
-        <p>🎉 <strong>Limited time:</strong> Flat 40% off frames! <a href="#contact">Visit now</a></p>
+        <p>🎉 <strong>Limited time:</strong> Flat 40% off on all type of frames! <a href="#contact">Visit now</a></p>
     </div>
 </div>
     <!-- HEADER -->
@@ -169,8 +169,7 @@
 
                         <small>This is a demo form and does not submit anywhere yet. Please call or WhatsApp to confirm your appointment.</small>
                         <br><br>
-                        <button type="button" class="btn btn-primary" onclick="window.location. <a>href='https://wa.me/919959988116'" class="btn btn-primary" target="_blank" rel="noopener">WhatsApp</a>">
-                            Submit & Contact
+                        <button type="button" class="btn btn-primary" onclick="window.location..href='https://wa.me/919959988116'">Submit & Contact
                         </button>
                     </form>
                 </div>
@@ -183,7 +182,7 @@
                 <div>
                     <p><strong>Visit our branches in Visakhapatnam</strong></p>
                     <p>
-                        Akkayyapalem &middot; Adarsh Nagar (Ushodaya Center)
+                        Akkayyapalem & Adarsh Nagar (Ushodaya Center)
                     </p>
 
                     <!-- Two maps for both locations -->
