Update button link and WhatsApp icon in index.html

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
                         <small>This is a demo form and does not submit anywhere yet. Please call or WhatsApp to confirm your appointment.</small>
                         <br><br>
-                        <button type="button" class="btn btn-primary" onclick="window.location..href='https://wa.me/919959988116'">Submit & Contact
+                        <button type="button" class="btn btn-primary" onclick="window.location..href='#contact'">Submit & Contact
                         </button>
                     </form>
                 </div>
@@ -234,7 +234,7 @@
     </footer>
 
 <a href="https://wa.me/919959988116" class="whatsapp-float" target="_blank" rel="noopener">
-    💬 WhatsApp
+    <img src="Whatsapp Icon.png">
 </a>
 
     <button class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
